74: фикс продолжается